# libiouring-server

./: .dockerignore  .gitignore  CMakeLists.txt  README.md
docs/plans/: 2026-04-15-cpp-reverse-proxy.md
examples/EchoServer/: CMakeLists.txt
examples/GameServer/: CMakeLists.txt
examples/GameServer/proto/: Account.proto  Auth.proto  Common.proto  Currency.proto  Enum.proto  Game.proto  Inventory.proto  Social.proto
examples/GameServer/src/: main.cpp  types.h
examples/GameServer/src/db/: db_service.h  memory_db_service.cpp  memory_db_service.h  pg_db_service.cpp  pg_db_service.h  sqlite_db_service.cpp  sqlite_db_service.h
examples/GameServer/src/game/: bot_manager.cpp  bot_manager.h  dungeon_generator.cpp  dungeon_generator.h  player_context.cpp  player_context.h  projectile_manager.cpp  projectile_manager.h  room.cpp  room.h  room_manager.cpp  room_manager.h
examples/GameServer/src/handler/: auth_handler.cpp  auth_handler.h  char_handler.cpp  char_handler.h  game_handler.cpp  game_handler.h  room_handler.cpp  room_handler.h  social_handler.cpp  social_handler.h
examples/GameServer/src/net/: game_session.cpp  game_session.h  io_worker.cpp  io_worker.h  io_worker_pool.cpp  io_worker_pool.h  packet_builder.h  packet_session.cpp  packet_session.h
examples/GameServer/src/system/: chat_system.cpp  chat_system.h  combat_system.cpp  combat_system.h  party_system.cpp  party_system.h
examples/QuartoPlatform/: CMakeLists.txt  Dockerfile  Makefile  docker-compose.yml
examples/QuartoPlatform/config/: editor.yaml  gateway.yaml
examples/QuartoPlatform/frontend/: .env  Dockerfile  index.html  package-lock.json  package.json
examples/QuartoPlatform/frontend/src/: App.tsx
examples/QuartoPlatform/frontend/src/api/: client.ts
examples/QuartoPlatform/frontend/src/components/: Header.tsx  MarkdownEditor.tsx  PreviewPane.tsx  Sidebar.tsx  StatusBar.tsx  Toast.tsx
examples/QuartoPlatform/frontend/src/hooks/: useAuth.ts  useAutoSave.ts  useDocuments.ts  usePublish.ts
examples/QuartoPlatform/frontend/src/pages/: EditorPage.tsx  LoginPage.tsx  PublishedPage.tsx
examples/QuartoPlatform/k8s/argocd/: application.yaml  appproject.yaml
examples/QuartoPlatform/k8s/base/: gateway-deployment.yaml  gateway-service.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  published-pvc.yaml  rbac.yaml  redis-deployment.yaml  redis-service.yaml
examples/QuartoPlatform/k8s/overlays/dev/: kustomization.yaml
examples/QuartoPlatform/scripts/: deploy.sh
examples/QuartoPlatform/src/: config.cpp  config.h  editor.cpp  editor.h  gateway.cpp  gateway.h  k8s_client.cpp  k8s_client.h  main.cpp  oauth.cpp  oauth.h  quarto.cpp  quarto.h  redis_client.cpp  redis_client.h
examples/QuartoPlatform/tests/: test_config.cpp
examples/ReverseProxy/: CMakeLists.txt
examples/WebServer/: CMakeLists.txt  README.md
examples/WebServer/public/: app.js  index.html  style.css
examples/WebServer/src/: main.cpp
examples/WebServer/src/db/: db_service.h  memory_db.h  pg_db.cpp  pg_db.h
examples/WebServer/src/handler/: health_handler.cpp  health_handler.h  item_handler.cpp  item_handler.h
examples/WebServer/src/model/: item.h
examples/WebServer/src/service/: item_service.h
examples/benchmarks/GameServerEpoll/: CMakeLists.txt
examples/benchmarks/GameServerEpoll/src/: combat.h  epoll_connection.cpp  epoll_connection.h  epoll_worker.cpp  epoll_worker.h  main.cpp  packet_builder.h  packet_handler.h  tcp_listener.cpp  tcp_listener.h  zone.cpp  zone.h  zone_manager.cpp  zone_manager.h
examples/benchmarks/GameServerIntegrated/: CMakeLists.txt
examples/benchmarks/GameServerIntegrated/src/: bench_session.cpp  bench_session.h  combat.h  main.cpp  packet_builder.h  packet_handler.h  zone.cpp  zone.h  zone_manager.cpp  zone_manager.h
examples/benchmarks/GameServerSeparated/: CMakeLists.txt
examples/benchmarks/GameServerSeparated/src/: bench_session.cpp  combat.h  main.cpp  packet_handler.h  zone.cpp  zone.h  zone_manager.cpp  zone_manager.h  zone_worker.cpp  zone_worker.h
include/servercore/: Concepts.h  Error.h  MpscQueue.h  Noncopyable.h  Profiler.h  Types.h
include/servergame/: Error.h  INotificationStore.h  Match.h  MatchConfig.h  MatchHandler.h  MatchRegistry.h  MatchmakerQueue.h  MatchmakerTicket.h  NetDispatchFn.h  Notification.h  NotificationService.h  PlayerRegistry.h  PresenceEvent.h  PresenceTracker.h  QueryParser.h  WsFrameBuilder.h
include/serverstorage/: Error.h  PgConnection.h  PgConnectionPool.h  PgResult.h  PgWorkerPool.h  QueryBuilder.h  StorageConfig.h
include/serverweb/: AuthConfig.h  AuthMiddleware.h  AuthService.h  CookieAuthMiddleware.h  CorsMiddleware.h  Error.h  HttpMethod.h  HttpParser.h  HttpRequest.h  HttpResponse.h  HttpSession.h  HttpStatus.h  (+16 more)
tests/: CMakeLists.txt  test_reverse_proxy.sh
tests/core/: test_mpsc_queue.cpp
tests/game/: test_match.cpp  test_match_registry.cpp  test_matchmaker_queue.cpp  test_notification_service.cpp  test_player_registry.cpp  test_presence_tracker.cpp  test_query_parser.cpp
tests/io/: test_cross_thread_flow.cpp  test_session_lifecycle.cpp
tests/job/: test_job_queue.cpp
tests/load/: 01_smoke.js  02_average.js  03_stress.js  04_breakpoint.js  config.js
tests/load/helpers/: requests.js
tests/ring/: test_poll_add.cpp
tests/server/: CMakeLists.txt  test_collision.cpp  test_game_match.cpp  test_placeholder.cpp  test_streaming.cpp  test_voxel_world.cpp
tests/shared/: CMakeLists.txt  test_byte_buffer.cpp  test_protocol.cpp  test_sdf.cpp  test_svo.cpp
tests/storage/: test_pg_result.cpp
tests/web/: ReverseProxyIntegrationTest.cpp  ReverseProxyTest.cpp  UpstreamPoolTest.cpp  UpstreamSessionTest.cpp  test_cookie_auth.cpp  test_http_parser.cpp  test_jwt_codec.cpp  test_middleware.cpp  test_process_executor.cpp  test_radix_tree.cpp  test_router.cpp  test_ws_frame_parser.cpp  test_ws_handshake.cpp  test_ws_integration.cpp
tools/: BusyWork.h  CMakeLists.txt  echo_bench.cpp  echo_test.py  run_bench.sh
tools/game_bench/: BenchClient.cpp  BenchClient.h  CMakeLists.txt  Config.h  LiveStats.h  Proto.h  Stats.h  game_bench.cpp
(+59 files in other folders)
